Rename WebVR origin trial in conditional features

BUG=714775

Review-Url: https://codereview.chromium.org/2839753004
Cr-Commit-Position: refs/heads/master@{#467022}

Former-commit-id: 67027f74a115a3d139b7ec92f0cc3d4a61fe6917